--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Отдел по Разработке Технологий - Банк</title>
-    <meta property="og:title" content="Отдел по Разработке Технологий - Банк">
+    <title>Отдел развития технологий</title>
+    <meta property="og:title" content="Отдел развития технологий">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/chatbot-robot-leadin.jpg">
     <link rel="stylesheet" href="css/menu.css">
