--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Отдел развития технологий</title>
     <meta property="og:title" content="Отдел развития технологий">
     <meta property="og:type" content="website">
@@ -43,13 +43,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
 
 
     <!-- Основной контент -->
@@ -165,7 +158,7 @@
             
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="images/image_-3.png" alt="Анна">
+                    <img src="images/women.jpg" alt="Наталья">
                     <h3>Наталья</h3>
                     <p>Начальник отдела</p>
                     <div class="social-links">
@@ -173,7 +166,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="images/image_-3.png" alt="Анна">
+                    <img src="images/women.jpg" alt="Екатерина">
                     <h4>Екатерина</h4>
                     <p>Старший менеджер</p>
                     <div class="social-links">
@@ -181,7 +174,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="images/image_-3.png" alt="Анна">
+                    <img src="images/women.jpg" alt="Анастасия">
                     <h5>Анастасия</h5>
                     <p>Старший менеджер</p>
                     <div class="social-links">
@@ -189,7 +182,7 @@
                     </div>
                 </div>
                 <div class="team-member">
-                    <img src="images/image_-2.png" alt="Александр">
+                    <img src="images/man.jpg" alt="Евгений">
                     <h6>Евгений</h6>
                     <p>Менеджер</p>
                     <div class="social-links">
