--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 
   <main>
     <section id="hero" class="fullscreen">
-      <div class="hero-content" data-aos="fade-up">
-        <h1>Интеллектуальные решения для банка</h1>
-        <p class="subtitle">Роботы, чат-боты, голосовые помощники</p>
-        <div class="scroller">
+      <div class="hero-content">
+        <h1 data-aos="fade-up">Интеллектуальные решения для банка</h1>
+        <p class="subtitle" data-aos="fade-up" data-aos-delay="100">Роботы, чат-боты, голосовые помощники</p>
+        <div class="scroller" data-aos="fade-up" data-aos-delay="200">
           <div class="mouse">
             <div class="wheel"></div>
           </div>
